# architecture-sprint-5

./: .gitignore  README.md  config.yml  domain.yml  pyproject.toml
data/: nlu.yml  rules.yml  stories.yml
results/: failed_test_stories.yml  intent_errors.json  intent_report.json  story_report.json
