[tool.poetry]
name = "architecture-sprint-5"
version = "0.1.0"
description = ""
authors = ["Mikhail Bigun <bigun.md@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
rasa = "^3.6.20"
transformers = "^4.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
